add get review comments list
